--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -21,3 +21,27 @@ header img{
     height: 2rem;
 }
 
+
+.voltar{
+    width: 2rem;
+    height: 2rem;   
+}
+
+.piso_inic{
+    display: flex;
+    flex-direction: column;
+    vertical-align: center;
+    font-size: 10rem;
+    font-weight: bold;
+}
+
+.botao_taf{
+    position: static;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+}
+
+.margem_inf{
+    border-bottom-color: solid grey 0.1rem;
+}
