--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -1,9 +1,9 @@
 body{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     padding-left: 2rem;
     padding-right: 2rem;
-    align-items: center;
     width: 2rem;
 }
 
@@ -35,13 +35,24 @@ header img{
     font-weight: bold;
 }
 
-.botao_taf{
-    position: static;
+button.botao_taf{
+    position: fixed;
+    top: 1px;
+    left: 1px;
+    z-index: 20;
     width: 3rem;
     height: 3rem;
     border-radius: 1.5rem;
+    border-color: transparent;
+    background-color: orange;
+    /* Funções aleatórias que se der problema apaguem*/
+    box-shadow: 0 3px 8px rgba(0,0,0,.5);
+    cursor: pointer;
 }
 
+button.botao_taf:active{
+    background-color: rgb(0, 0, 255);
+}
 .margem_inf{
     border-bottom-color: solid grey 0.1rem;
 }
