--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -1,19 +1,35 @@
-body{
+body main{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     padding-left: 2rem;
     padding-right: 2rem;
+    align-items: center;
     width: 2rem;
 }
 
 header{
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   
-   font-size: 1rem;
+   position: fixed;
+   left: 0%;
+   top: 0%;
+   width: 100%;
+   height: 3rem;
    background-color: rgb(189, 27, 27);
+   align-items: center;
+   
+}
+header ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 3rem;
+    padding-right: 3rem;
+    margin-top: 0rem;
+}
+
+h1#title{
+    font-size: 1.5rem;
+    
 }
 
 header img{
@@ -48,6 +64,7 @@ button.botao_taf{
     /* Funções aleatórias que se der problema apaguem*/
     box-shadow: 0 3px 8px rgba(0,0,0,.5);
     cursor: pointer;
+    padding: 1rem;
 }
 
 button.botao_taf:active{
