--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     padding-left: 2rem;
@@ -7,7 +7,7 @@ body{
     width: 2rem;
 }
 
-header{
+header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
@@ -16,8 +16,27 @@ header{
    background-color: rgb(189, 27, 27);
 }
 
-header img{
+header img {
     width: 2rem;
     height: 2rem;
+}
+
+.atras {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.popup{
+    position: fixed;
+    width: 20rem;
+    height: 30rem;
+    padding: 10px;
+    background-color: white;
+    text-align: center;
 }
 
