--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -17,6 +17,7 @@ header{
    align-items: center;
    
 }
+
 header ul{
     display: flex;
     flex-direction: row;
@@ -49,9 +50,8 @@ header img {
 
 .popup{
     position: fixed;
-    width: 20rem;
-    height: 30rem;
-    padding: 10px;
+    width: 50%;
+    padding: 5px;
     background-color: white;
     text-align: center;
 }
