--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -3,7 +3,6 @@ body main {
     flex-direction: column;
     padding-left: 2rem;
     padding-right: 2rem;
-    align-items: center;
 }
 
 header.cabecario{
@@ -76,17 +75,14 @@ header#popup_header{
 }
 
 .piso_inic{
-    display: flex;
-    flex-direction: column;
-    vertical-align: center;
     font-size: 10rem;
     font-weight: bold;
 }
 
 button.botao_taf{
     position: fixed;
-    top: 50%;
-    left: 50%;
+    bottom: 3rem;
+    right: 3rem;
     z-index: 1;
     width: 3rem;
     height: 3rem;
@@ -96,14 +92,19 @@ button.botao_taf{
     /* Funções aleatórias que se der problema apaguem*/
     box-shadow: 0 3px 8px rgba(0,0,0,.5);
     cursor: pointer;
-    padding: 1rem;
+}
+img#taf{
+    width: 2rem;
+    height: 2rem;
 }
 
-button.botao_taf:active{
-    background-color: rgb(0, 0, 255);
-}
 .margem_inf{
-    border-bottom-color: solid grey 0.1rem;
+    width: 100%;
+    margin-bottom: 2rem;
+    border-bottom: solid grey 0.1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .coluna {
