--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -8,6 +8,7 @@ body main {
     flex-direction: column;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 3rem;
 }
 
 header.cabecario{
