--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -139,3 +139,10 @@ div.linha img{
     width: 2rem;
     height: 2rem;
 }
+button.botao_leg{
+    width: 15%;
+    height: 15%;
+    border-color: black;
+    cursor: pointer;
+    font-size: 200%;
+}
