--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -78,13 +78,6 @@ header img {
     font-size: 1.5rem;
 }
 
-
-
-.voltar{
-    width: 2rem;
-    height: 2rem;   
-}
-
 .piso_inic{
     font-size: 5rem;
     font-weight: bold;
@@ -168,6 +161,7 @@ div.linha img{
         width: 70%;
     }
 }*/
+
 a.botao_leg{
     border: solid black;
     padding-left: 0.5rem;
@@ -207,7 +201,7 @@ h1#piso_1{
     margin-right: 25%;
 }
 
-img#setas{
+.setas{
     width: 1rem;
     height: 1rem;
 }
@@ -223,6 +217,7 @@ a#botao_hist{
     border: solid black 0.1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    margin-bottom: 2rem;
 }
 
 img#hist{
@@ -245,4 +240,9 @@ img.first{
 img.second{
     padding: 1rem;
     background-color:crimson;
+}
+
+.voltar_piso1{
+    position: absolute;
+    left: 25%;
 }
