--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -265,3 +265,7 @@ main#main_analise_hist {
     padding-right: 5%;
     background-color: rgb(209, 234, 255);
 }
+image.leg{
+    height: 1rem;
+    width: 1rem;
+}
