--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -128,6 +128,8 @@ img#voltar{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    list-style: none;
+    padding-left: 0%;
 }
 
 ul.retirar{
@@ -212,11 +214,6 @@ h1#piso_1{
     height: 1rem;
 }
 
-ul#piso1{
-    list-style: none;
-    padding-left: 0%;
-}
-
 a#botao_hist{
     position: relative;
     align-items: center;
@@ -237,6 +234,8 @@ img#hist{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    list-style: none;
+    padding-left: 0%;
 }
 img.first{
     padding: 1rem;
@@ -252,12 +251,12 @@ img.second{
     position: absolute;
     left: 25%;
 }
-main#main_analise_hist {
+#main_analise_hist {
     display: flex;
     flex-direction: column;
     align-items: center;
     border: solid black 0.1rem;
-    margin-top: 30%;
+    margin-top: 4rem;
     margin-left: 3rem;
     margin-right: 3rem;
     padding-top: 0%;
