--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -20,6 +20,7 @@ header.cabecario{
    background-color: rgb(0, 208, 255);
    align-items: center;
    box-shadow: 0 0.2rem 0.4rem rgba(0,0,0,.5);
+   z-index: 5;
 }
 
 header ul{
@@ -250,6 +251,7 @@ img.second{
 .voltar_piso1{
     position: absolute;
     left: 25%;
+    z-index: 2;
 }
 #main_analise_hist {
     display: flex;
