--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -18,10 +18,11 @@ header.cabecario{
    top: 0%;
    width: 100%;
    height: 3rem;
-   background-color: rgb(0, 208, 255);
+   background-color: #3859E2;
    align-items: center;
    box-shadow: 0 0.2rem 0.4rem rgba(0,0,0,.5);
    z-index: 5;
+   color: #ffffff;
 }
 
 header ul{
@@ -32,6 +33,7 @@ header ul{
     height: 3rem;
     padding-right: 3rem;
     margin-top: 0rem;
+
 }
 
 h1#title{
@@ -94,7 +96,7 @@ header img {
     height: 4.5rem;
     border-radius: 2.25rem;
     border-color: transparent;
-    background-color: orange;
+    background-color: #E6D600;
     /* Funções aleatórias que se der problema apaguem*/
     box-shadow: 0 3px 8px rgba(0,0,0,.5);
     cursor: pointer;
@@ -167,7 +169,7 @@ div.linha img{
 }*/
 
 a.botao_leg{
-    border: solid black;
+    background-color: #A8B2CD;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
@@ -219,10 +221,12 @@ h1#piso_1{
 a#botao_hist{
     position: relative;
     align-items: center;
-    border: solid black 0.1rem;
+    background-color: #3859E2;
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 2rem;
+    color: white;
+    text-decoration:none;
 }
 
 img#hist{
@@ -241,12 +245,12 @@ img#hist{
 }
 img.first{
     padding: 1rem;
-    background-color: coral;
+    background-color: #FF7C1C;
 }
 
 img.second{
     padding: 1rem;
-    background-color:crimson;
+    background-color:#D30003;
 }
 
 .voltar_piso1{
@@ -258,14 +262,13 @@ img.second{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid black 0.1rem;
     margin-top: 4rem;
     margin-left: 3rem;
     margin-right: 3rem;
     padding-top: 0%;
     padding-left: 5%;
     padding-right: 5%;
-    background-color: rgb(209, 234, 255);
+    background-color: #A8B2CD;
 }
 image.leg{
     height: 1rem;
@@ -273,10 +276,11 @@ image.leg{
 }
 
 .voltar_hist{
-    margin-right: 15rem;
+    margin-right: 13rem;
 }
 
 body.body_menu{
+    margin-left: 0rem;
     margin-top: 0%;
     height: 100%;
     display: flex;
@@ -287,8 +291,14 @@ body.body_menu{
     border-right: solid black 0.1rem;
 }
 
+.main_menu{
+    padding-top: 1rem;
+}
+
 h1#title_menu{
-    font-size: 1rem;
+    font-size: 0.8rem;
+    color: white;
+    margin-left: 0.2rem;
 }
 img#icone_menu{
     width: 2.5rem;
@@ -302,7 +312,8 @@ ul#alinha_menu{
 
 header#header_menu{
     padding-bottom: 0.5rem;
-    border-bottom: solid black 0.1rem;
+    background-color: #3859E2;
+    width: 100%;
 }
 
 ul#retirar_menu{
