--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -1,7 +1,7 @@
 html{
     height: 100%;
     width: 100%;
-    font-family: 'Saira', sans-serif;
+    font-family: 'Saira', 'Cairo',  sans-serif;
 }
 
 body main {
