--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -298,7 +298,7 @@ body.body_menu{
 h1#title_menu{
     font-size: 0.9rem;
     color: white;
-    margin-left: 0.2rem;
+    margin-left: 0.75rem;
 }
 img#icone_menu{
     width: 2.5rem;
@@ -321,4 +321,17 @@ ul#retirar_menu{
     padding-left: 0rem;
     font-size: 2rem;
     margin: 0.5rem;
+}
+
+.coluna_piso1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+div.coluna_piso1 div.linha{
+    height: 3rem;
+    font-size: 2rem;
+
 }
