--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -84,6 +84,7 @@ header img {
 .popup_vaga_oc{
     height: 3rem;
     width: 3rem;
+    background-color: #3859E2;
 }
 .piso_inic{
     font-size: 3rem;
