--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -124,8 +124,8 @@ header img {
     cursor: pointer;
 }
 img#taf{
-    margin-left: 0.75rem;
-    margin-top: 0.75rem;
+    margin-left: auto;
+    margin-top: auto;
     width: 3rem;
     height: 3rem;
 }
