--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -168,7 +168,10 @@ ul.retirar{
     margin-right: 1rem;
 }
 .alinhamento{
-    padding-left: 1rem;
+    list-style: none;
+    padding-left: 0rem;
+    font-size: 1.5rem;
+    margin: 0.25rem;
 }
 
 div.coluna div.linha p{
