--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -411,6 +411,8 @@ div.coluna_piso1 div.linha{
 .botao_menu_fechar{
     background: rgba(0,0,0,0);
     border: 0rem;
+}
+
 .popup_registro{
     top: 10%;
     left: 25%;
