--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -159,6 +159,15 @@ img#voltar{
     padding-left: 0%;
 }
 
+.linha_fonte{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding-left: 0%;
+    font-size: 0.9rem;
+}
 ul.retirar{
     list-style: none;
     font-size: 30%;
@@ -182,7 +191,10 @@ div.linha img{
     width: 2rem;
     height: 2rem;
 }
-
+div.linha_fonte img{
+    width: 2rem;
+    height: 2rem;
+}
 /*@media (max-width: 500px) {
     div.popup p{
         font-size: 1rem;
@@ -272,11 +284,6 @@ img#hist{
 img.first{
     padding: 1rem;
     background-color: #FF7C1C;
-}
-
-img.second{
-    padding: 1rem;
-    background-color:#D30003;
 }
 
 .voltar_piso1{
