--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -71,6 +71,7 @@ header img {
     background-color: white;
     background:rgb(255, 255, 255);
     visibility:hidden;
+    z-index: 10;
 }
 
 .popup{
@@ -82,7 +83,8 @@ header img {
     flex-direction: column;
     align-items: center;
     background-color: white;
-    background:rgb(255, 255, 255)
+    background:rgb(255, 255, 255);
+    z-index: 10;
 }
 
 .fake_header{
@@ -130,7 +132,7 @@ img#taf{
 img#voltar{
     width: 2rem;
     height: 2rem;
-    z-index: -1;
+    z-index: 1;
 }
 .margem_inf{
     width: 100%;
@@ -155,6 +157,7 @@ img#voltar{
     align-items: center;
     list-style: none;
     padding-left: 0%;
+    z-index: 1;
 }
 
 ul.retirar{
@@ -196,6 +199,7 @@ a.botao_leg{
     background-color: #A8B2CD;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    z-index: 1;
 }
 
 a.botao_config{
@@ -251,6 +255,7 @@ a#botao_hist{
     margin-bottom: 2rem;
     color: white;
     text-decoration:none;
+    z-index: 1;
 }
 
 img#hist{
@@ -422,6 +427,7 @@ div.coluna_piso1 div.linha{
     background-color: white;
     background:rgb(255, 255, 255);
     visibility:hidden;
+    z-index: 10;
 }
 
 .popup_retirada{
@@ -435,4 +441,16 @@ div.coluna_piso1 div.linha{
     background-color: white;
     background:rgb(255, 255, 255);
     visibility:hidden;
+    z-index: 10;
+}
+
+#escuridao{
+    position: fixed;
+    top: 0rem;
+    right: 0rem;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 3;
 }
