--- a/Sketches_css/style.css
+++ b/Sketches_css/style.css
@@ -440,3 +440,17 @@ div.coluna_piso1 div.linha{
     background:rgb(255, 255, 255);
     visibility:hidden;
 }
+
+.popup_legenda{
+    top: 10%;
+    left: 25%;
+    right: 25%;
+    width: 50%;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    background:rgb(255, 255, 255);
+    visibility:hidden;
+}
